samples/_failures_safe/1761606258_e2b6b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b841e0a.c: In function ‘main’:
./samples/SAFE/__tmp_5b841e0a.c:155:9: error: expected expression at end of input
  155 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_5b841e0a.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b841e0a.c:155:9: error: expected declaration or statement at end of input
